# process_mining_api

./: .env-example  .gitignore  README.md  app.py  pyproject.toml
src/json_retrieval/: json_retrieval.py  json_retriever.py
src/json_retrieval/prompts/: prompts.py
src/process_mining_api/: llm_response.py  process_mining_test.py  test.py
src/process_mining_api/responsemodels/: basic_response.py  query.py
