[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "process_mining_api"
version = "0.1.0"
description = "Process mining API for LLM-enabled process mining"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn>=0.47.0",
    "fastapi>=0.136.1",
    "python-multipart>=0.0.29",
    "pm4py>=2.7.22.3",
    "pandas>=3.0.3",
    "langchain-text-splitters",
    "langchain-qdrant",
    "langchain-ollama",
    "dotenv>=0.9.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.hatch.build.targets.wheel]
packages = ["src/process_mining_api", "src/json_retrieval"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.autopep8]
max_line_length = 90

[tool.pylint."FORMAT"]
max-line-length = 90
